# hw-cyber

./: .gitignore  Makefile  README.md  events.json  pyproject.toml
consumer/: event_consumer.py  schemas.py  services.py
consumer/configuration/: .env-consumer  config.py
consumer/database/: dbsqlite.py
consumer/file_storage/: log_file.py
propagator/: event_propagator.py
propagator/configuration/: .env-propagator  config.py
tests/: test_consumer_saving_to_log_file.py
