[tool.poetry]
name = "events_project"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "consumer" },
    { include = "propagator" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.10.1"
httpx = "^0.28.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
aiosqlite = "^0.21.0"
fastapi = "^0.116.2"
aiofiles = "^24.1.0"
uvicorn = "^0.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
